--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -5,9 +5,9 @@
     <string name="amount">总价</string>
     <string name="fifteen_percent">15%</string>
     <string name="eighteen_percent">18%</string>
-    <string name="custom_tip_percentage">自定义 %</string>
+    <string name="custom_tip_percentage">定制比例 %</string>
     <string name="tip">小费</string>
     <string name="total">总价</string>
-    <string name="people">人</string>
+    <string name="people">人数</string>
 
 </resources>
