--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Tip Calculator</string>
-    <string name="amount">Amount</string>
+    <string name="app_name">增强的小费计算器</string>
+    <string name="amount">总金额</string>
     <string name="fifteen_percent">15%</string>
     <string name="eighteen_percent">18%</string>
-    <string name="custom_tip_percentage">Custom %</string>
-    <string name="tip">Tip</string>
-    <string name="total">Total</string>
-    
+    <string name="custom_tip_percentage">小费比例 %</string>
+    <string name="tip">小费金额</string>
+    <string name="total">人均消费</string>
+    <string name="number">人数</string>
+
 </resources>
