--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="tip">Tip</string>
     <string name="total">Total</string>
     <string name="people">number in party</string>
+    <string name="peopleA">Total per person</string>
 </resources>
