--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,9 @@
     <string name="custom_tip_percentage">Custom %</string>
     <string name="tip">Tip</string>
     <string name="total">Total</string>
-    
+    <string name="number">number</string>
+    <string name="average">average</string>
+    <string name="activity">Activity2</string>
+
+
 </resources>
