--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="eighteen_percent">18%</string>
     <string name="custom_tip_percentage">Custom %</string>
     <string name="tip">Tip</string>
-    <string name="total">Total</string>
-    
+    <string name="total_per_person">Total per person</string>
+    <string name="number_people">number in party</string>
+    <string name="number">1</string>
+
 </resources>
