--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Tip Calculator</string>
+    <string name="app_name">Tip Calculator Enhanced</string>
     <string name="amount">Amount</string>
     <string name="fifteen_percent">15%</string>
     <string name="eighteen_percent">18%</string>
     <string name="custom_tip_percentage">Custom %</string>
-    <string name="tip">Tip</string>
-    <string name="total">Total</string>
+    <string name="totalTip">Total Tip</string>
+    <string name="totalPerPerson">Total per person</string>
+    <string name="number_in_party">number in party</string>
+
     
 </resources>
