--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
 
     <string name="app_name">Tip Calculator</string>
     <string name="amount">Amount</string>
+    <string name="number">Number in party</string>
     <string name="fifteen_percent">15%</string>
     <string name="eighteen_percent">18%</string>
     <string name="custom_tip_percentage">Custom %</string>
-    <string name="tip">Tip</string>
-    <string name="total">Total</string>
-    
+    <string name="total_tip">Total tip</string>
+    <string name="total_per_person">Total per person</string>
 </resources>
