--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Tip Calculator</string>
+    <string name="app_name">Enhanced Tip Calculator</string>
     <string name="amount">Amount</string>
     <string name="fifteen_percent">15%</string>
     <string name="eighteen_percent">18%</string>
     <string name="custom_tip_percentage">Custom %</string>
     <string name="tip">Tip</string>
-    <string name="total">Total</string>
+    <string name="total">Total each</string>
     <string name="number">Member Number</string>
     <string name="alert">Alert</string>
     <string name="message">The number can\'t be negative!</string>
