--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="custom_tip_percentage">Custom %</string>
     <string name="tip">Tip</string>
     <string name="total">Total</string>
+    <string name="totaltip">Total Tip</string>
+    <string name="totalperperson">Total per person</string>
     
 </resources>
