--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="custom_tip_percentage">Custom %</string>
     <string name="tip">Tip</string>
     <string name="total">Total</string>
-    <string name="totaltip">Total Tip</string>
-    <string name="totalperperson">Total per person</string>
+    <string name="total_tip">Total Tip</string>
+    <string name="total_per_person">Total per person</string>
+
     
 </resources>
