--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Tip Calculator</string>
-    <string name="amount">Amount</string>
-    <string name="fifteen_percent">15%</string>
-    <string name="eighteen_percent">18%</string>
-    <string name="custom_tip_percentage">Custom %</string>
-    <string name="total">Total Tip</string>
-    <string name="per">Total per person</string>
-    
+<string name="app_name">Tip Caculator</string>
+<string name="amount">Amount</string>
+<string name="fifteen_percent">15%</string>
+<string name="eighteen_percent">18%</string>
+<string name="custom_tip_percentage">Custom %</string>
+<string name="total">TotalTip</string>
+<string name="per">PerPerson</string>
+
 </resources>
