--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="fifteen_percent">15%</string>
     <string name="eighteen_percent">18%</string>
     <string name="custom_tip_percentage">Custom %</string>
-    <string name="tip">Tip</string>
-    <string name="total">Total</string>
-    
+    <string name="number">number of customers</string>
+    <string name="total_tip">Total Tip</string>
+    <string name="personnal_total">Total in person</string>
+
 </resources>
