--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,12 @@
 
     <string name="app_name">Tip Calculator</string>
     <string name="amount">Amount</string>
+    <string name="each">Each one</string>
+    <string name="coustomer">Coustomer</string>
     <string name="fifteen_percent">15%</string>
     <string name="eighteen_percent">18%</string>
     <string name="custom_tip_percentage">Custom %</string>
     <string name="tip">Tip</string>
     <string name="total">Total</string>
-    
+
 </resources>
