--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Tip Calculator</string>
-    <string name="amount">Amount</string>
+    <string name="app_name">小费计算器</string>
+    <string name="amount">花费</string>
     <string name="fifteen_percent">15%</string>
     <string name="eighteen_percent">18%</string>
-    <string name="custom_tip_percentage">Custom %</string>
-    <string name="tip">Tip</string>
-    <string name="total">Total</string>
+    <string name="custom_tip_percentage">小费率</string>
+    <string name="tip">小费</string>
+    <string name="total">总花费</string>
+    <string name="number">人数</string>
+    <string name="Average">人均花费</string>
     
 </resources>
